# Nt

./: CMakeLists.txt  GTextEdit.cpp  GTextEdit.h  LICENSE  QDirList.h  README.md  main.cpp  mainwindow.cpp  mainwindow.h
resources/: icon.rc
